switch init script default interpertor to bash

--- a/templates/default/redis.init.erb
+++ b/templates/default/redis.init.erb
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 #
 # Simple Redis init.d script conceived to work on Linux systems
 # as it does use of the /proc filesystem.
